开启cilium的debug模式

--- a/cluster/core/kube-system/cilium/helm-release.yaml
+++ b/cluster/core/kube-system/cilium/helm-release.yaml
@@ -16,6 +16,8 @@ spec:
         name: cilium-charts
         namespace: flux-system
   values:
+    debug:
+      enabled: true
     operator:
       replicas: 1
       nodeSelector:
