开启cilium的替换kube-proxy功能

--- a/cluster/core/kube-system/cilium/helm-release.yaml
+++ b/cluster/core/kube-system/cilium/helm-release.yaml
@@ -23,3 +23,6 @@ spec:
       nodeSelector:
         location: "home"
         kubernetes.io/arch: "amd64"
+    kubeProxyReplacement: "strict"
+    k8sServiceHost: "${SECRET_K8S_API_SERVER_HOST}"
+    k8sServicePort: "${SECRET_K8S_API_SERVER_PORT}"
