--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -29,14 +29,16 @@ stringData:
   SECRET_HASS_INFLUXDB_PASSWORD: ENC[AES256_GCM,data:oCC33dt+P2AjlIH0Y6r+zck/ycI8vH8KGA3ADtT/2Ss=,iv:K6V4/5pnbITmEq8J7yRQmH0aNbTJL8sm1CN6p45gVQ8=,tag:6JgBgwEyTkbL61eZI1tLpg==,type:str]
   SECRET_BITWARDEN_PGSQL_USERNAME: ENC[AES256_GCM,data:FF8iNw==,iv:xJzaOVLlKwo6V3r7X3wQuVwypbLU5RQHeBlzGOE8lGc=,tag:GWgRadh1R4DdmkpTP4u9cg==,type:str]
   SECRET_BITWARDEN_PGSQL_PASSWORD: ENC[AES256_GCM,data:m6USyEn3k+JeQLqQsOqiKQGvq1xhIzv9kplHObDBKI0=,iv:Ct7GBoziaMoiduoZFU7PI+GOPzBwVsDnFLC1O0XQcdM=,tag:VailzZ/d00ueBSjXS7VTGA==,type:str]
+  SECRET_K8S_API_SERVER_HOST: ENC[AES256_GCM,data:276MiX/6MKDozPA=,iv:g2GOW3aE9Yn4aEka5S0mUJqEhlgsIz/TjSXx0CPS4Lg=,tag:YNPn31136uIpPH6VWpa/jA==,type:str]
+  SECRET_K8S_API_SERVER_PORT: ENC[AES256_GCM,data:F96gMw==,iv:ohv+x14EZf4NUzWUn6S7G4wJphb9HVygcjf9sPdJUQw=,tag:8mgIO6ya3gUzGPgKwwS70Q==,type:str]
 sops:
   kms: [ ]
   gcp_kms: [ ]
   azure_kv: [ ]
   hc_vault: [ ]
   age: [ ]
-  lastmodified: "2022-08-19T09:27:58Z"
-  mac: ENC[AES256_GCM,data:g0Erba3XtZyTjD9HA4SOrfHBz0wdHPBUZFx/llVZ67QgplwkA7wwW9aU21q0XYs3Uh9xNFJqYRyNuGoehNd9mmZ2tq1JenOnOM3Mh6Yq6TrQ+tf/9WWt2bRfy1d0jsWuxMlWtymterybZaNrZ2/Yj/cJkK5C0kU84FMRipWneIQ=,iv:jBq0uwNpFVaMzWq143ZWqoJzCZUO5exGIS/W/D0CmrI=,tag:BGSxF8AqXr6ULnww+BGxqA==,type:str]
+  lastmodified: "2022-08-21T19:20:54Z"
+  mac: ENC[AES256_GCM,data:3BbHkCkQM6Lkdi4zk1vE7KYdXOfY8LKfdtkwzVarTzLFfXNrJizkYFK12YA2WssIicAbc1MwKjtH5NOodxYXM6W4ephPIHJEJ1/xozlJb0clbZVF5VW3ibktYpmTVvPsODHWfX91N4WYpgC+g2sLEHfK2oZl7cCJ4JbTf1/l5Iw=,iv:dbEiznHb63OZiACjBv6haAaXE88JHsS2P/iaWkSopgA=,tag:v0uzosBa9yaDfjs6iPTb3Q==,type:str]
   pgp:
     - created_at: "2021-07-14T11:43:40Z"
       enc: |
