将3d-print命名空间的服务改成使用泛域名证书，且添加直连域名

--- a/cluster/apps/3d-print/octoprint/helm-release.yaml
+++ b/cluster/apps/3d-print/octoprint/helm-release.yaml
@@ -25,18 +25,20 @@ spec:
     ingress:
       main:
         enabled: true
+        annotations:
+          kubernetes.io/ingress.class: traefik
         hosts:
           - host: "octoprint.${SECRET_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
-        annotations:
-          kubernetes.io/ingress.class: traefik
-          kubernetes.io/tls-acme: "true"
+          - host: "octoprint.direct.${SECRET_DOMAIN}"
+            paths:
+              - path: /
+                pathType: Prefix
         tls:
-          - hosts:
-              - "octoprint.${SECRET_DOMAIN}"
-            secretName: octoprint-tls
+          - secretName: "${SECRET_DOMAIN/./-}-tls"
+          - secretName: "direct-${SECRET_DOMAIN/./-}-tls"
     securityContext:
       privileged: true
     persistence:
