--- a/cluster/apps/others/bitwarden/helm-release.yaml
+++ b/cluster/apps/others/bitwarden/helm-release.yaml
@@ -26,6 +26,8 @@ spec:
     ingress:
       main:
         enabled: true
+        annotations:
+          kubernetes.io/ingress.class: traefik
         hosts:
           - host: "bitwarden.${SECRET_DOMAIN}"
             paths:
@@ -41,15 +43,23 @@ spec:
                 pathType: Prefix
                 service:
                   port: 3012
-        annotations:
-          kubernetes.io/ingress.class: "traefik"
-          kubernetes.io/tls-acme: "true"
-          cert-manager.io/cluster-issuer: "letsencrypt-dns"
+          - host: "bitwarden.direct.${SECRET_DOMAIN}"
+            paths:
+              - path: /
+                pathType: Prefix
+                service:
+                  port: 80
+              - path: /notifications/hub/negotiate
+                pathType: Prefix
+                service:
+                  port: 80
+              - path: /notifications/hub
+                pathType: Prefix
+                service:
+                  port: 3012
         tls:
-          - hosts:
-              - "bitwarden.${SECRET_DOMAIN}"
-            secretName: bitwarden-tls
-
+          - secretName: "${SECRET_DOMAIN/./-}-tls"
+          - secretName: "direct-${SECRET_DOMAIN/./-}-tls"
     persistence:
       config:
         enabled: true
