--- a/cluster/apps/file-service/nextcloud/helm-release.yaml
+++ b/cluster/apps/file-service/nextcloud/helm-release.yaml
@@ -22,19 +22,20 @@ spec:
 
     ingress:
       enabled: true
+      annotations:
+        kubernetes.io/ingress.class: "traefik"
       hosts:
         - host: "nextcloud.${SECRET_DOMAIN}"
           paths:
             - path: /
               pathType: Prefix
-      annotations:
-        kubernetes.io/ingress.class: "traefik"
-        kubernetes.io/tls-acme: "true"
-        cert-manager.io/cluster-issuer: "letsencrypt-dns"
+        - host: "nextcloud.direct.${SECRET_DOMAIN}"
+          paths:
+            - path: /
+              pathType: Prefix
       tls:
-        - hosts:
-            - "nextcloud.${SECRET_DOMAIN}"
-          secretName: nextcloud-tls
+        - secretName: "${SECRET_DOMAIN/./-}-tls"
+        - secretName: "direct-${SECRET_DOMAIN/./-}-tls"
 
     nextcloud:
       host: "nextcloud.${SECRET_DOMAIN}"
