--- a/cluster/apps/home-automation/home-assistant/helm-release.yaml
+++ b/cluster/apps/home-automation/home-assistant/helm-release.yaml
@@ -25,19 +25,21 @@ spec:
     ingress:
       main:
         enabled: true
+        annotations:
+          kubernetes.io/ingress.class: "traefik"
         hosts:
           - host: "hass.${SECRET_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
-        annotations:
-          kubernetes.io/ingress.class: "traefik"
-          kubernetes.io/tls-acme: "true"
-          cert-manager.io/cluster-issuer: "letsencrypt-dns"
+          - host: "hass.direct.${SECRET_DOMAIN}"
+            paths:
+              - path: /
+                pathType: Prefix
         tls:
-          - hosts:
-              - "hass.${SECRET_DOMAIN}"
-            secretName: hass-tls
+          - secretName: "${SECRET_DOMAIN/./-}-tls"
+          - secretName: "direct-${SECRET_DOMAIN/./-}-tls"
+
     persistence:
       config:
         enabled: true
@@ -59,24 +61,28 @@ spec:
           - "/config/.vscode"
           - --extensions-dir
           - "/config/.vscode"
+
         ingress:
           enabled: true
           annotations:
             kubernetes.io/ingress.class: "traefik"
-            kubernetes.io/tls-acme: "true"
-            cert-manager.io/cluster-issuer: "letsencrypt-dns"
             traefik.ingress.kubernetes.io/router.middlewares: "kube-system-rfc1918@kubernetescrd"
           hosts:
             - host: "hass-vscode.${SECRET_DOMAIN}"
               paths:
                 - path: /
                   pathType: Prefix
+            - host: "hass-vscode.direct.${SECRET_DOMAIN}"
+                paths:
+                  - path: /
+                    pathType: Prefix
           tls:
-            - hosts:
-                - "hass-vscode.${SECRET_DOMAIN}"
-              secretName: hass-vscode-tls
+            - secretName: "${SECRET_DOMAIN/./-}-tls"
+            - secretName: "direct-${SECRET_DOMAIN/./-}-tls"
+
         volumeMounts:
           - name: config
             mountPath: /config
+
         nodeSelector:
           location: "home"
