添加一个临时存储未归类媒体文件的pvc和samba共享目录

--- a/cluster/apps/file-service/pvcs/kustomization.yaml
+++ b/cluster/apps/file-service/pvcs/kustomization.yaml
@@ -4,5 +4,6 @@ kind: Kustomization
 resources:
   - camera-files.yaml
   - music-files.yaml
+  - other-media-files.yaml
   - recording-files.yaml
   - screenshot-files.yaml
