测试将nexus ingress资源注释中的设置ingress class部分改为直接指定ingressClassName

--- a/cluster/apps/programming/nexus-repository-manager/helm-release.yaml
+++ b/cluster/apps/programming/nexus-repository-manager/helm-release.yaml
@@ -42,8 +42,7 @@ spec:
 
     ingress:
       enabled: true
-      annotations:
-        kubernetes.io/ingress.class: "traefik"
+      ingressClassName: "traefik"
       hostPath: /
       hostRepo: "nexus.${SECRET_DOMAIN}"
       tls:
