--- a/cluster/apps/home-automation/home-assistant/helm-release.yaml
+++ b/cluster/apps/home-automation/home-assistant/helm-release.yaml
@@ -25,8 +25,7 @@ spec:
     ingress:
       main:
         enabled: true
-        annotations:
-          kubernetes.io/ingress.class: "traefik"
+        ingressClassName: "traefik"
         hosts:
           - host: "hass.${SECRET_DOMAIN}"
             paths:
@@ -64,8 +63,8 @@ spec:
 
         ingress:
           enabled: true
+          ingressClassName: "traefik"
           annotations:
-            kubernetes.io/ingress.class: "traefik"
             traefik.ingress.kubernetes.io/router.middlewares: "kube-system-rfc1918@kubernetescrd"
           hosts:
             - host: "hass-vscode.${SECRET_DOMAIN}"
