将bazarr改成使用泛域名证书

--- a/cluster/apps/entertainment/bazarr/helm-release.yaml
+++ b/cluster/apps/entertainment/bazarr/helm-release.yaml
@@ -47,17 +47,13 @@ spec:
     ingress:
       main:
         enabled: true
+        ingressClassName: "traefik"
+        annotations:
+          traefik.ingress.kubernetes.io/router.middlewares: "kube-system-rfc1918@kubernetescrd"
         hosts:
           - host: "bazarr.${SECRET_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
-        annotations:
-          kubernetes.io/ingress.class: "traefik"
-          kubernetes.io/tls-acme: "true"
-          cert-manager.io/cluster-issuer: "letsencrypt-dns"
-          traefik.ingress.kubernetes.io/router.middlewares: "kube-system-rfc1918@kubernetescrd"
         tls:
-          - hosts:
-              - "bazarr.${SECRET_DOMAIN}"
-            secretName: bazarr-tls
+          - secretName: "${SECRET_DOMAIN/./-}-tls"
