--- a/cluster/apps/entertainment/emby/helm-release.yaml
+++ b/cluster/apps/entertainment/emby/helm-release.yaml
@@ -70,6 +70,7 @@ spec:
     ingress:
       main:
         enabled: true
+        ingressClassName: "traefik"
         hosts:
           - host: "emby.${SECRET_DOMAIN}"
             paths:
@@ -79,8 +80,6 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
-        annotations:
-          kubernetes.io/ingress.class: "traefik"
         tls:
           - secretName: "${SECRET_DOMAIN/./-}-tls"
           - secretName: "direct-${SECRET_DOMAIN/./-}-tls"
