--- a/cluster/apps/entertainment/jellyfin/helm-release.yaml
+++ b/cluster/apps/entertainment/jellyfin/helm-release.yaml
@@ -61,16 +61,16 @@ spec:
     ingress:
       main:
         enabled: true
+        ingressClassName: "traefik"
         hosts:
           - host: "jellyfin.${SECRET_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
-        annotations:
-          kubernetes.io/ingress.class: "traefik"
-          kubernetes.io/tls-acme: "true"
-          cert-manager.io/cluster-issuer: "letsencrypt-dns"
+          - host: "jellyfin.direct.${SECRET_DOMAIN}"
+            paths:
+              - path: /
+                pathType: Prefix
         tls:
-          - hosts:
-              - "jellyfin.${SECRET_DOMAIN}"
-            secretName: jellyfin-tls
+          - secretName: "${SECRET_DOMAIN/./-}-tls"
+          - secretName: "direct-${SECRET_DOMAIN/./-}-tls"
