--- a/cluster/apps/entertainment/prowlarr/helm-release.yaml
+++ b/cluster/apps/entertainment/prowlarr/helm-release.yaml
@@ -35,17 +35,13 @@ spec:
     ingress:
       main:
         enabled: true
+        ingressClassName: "traefik"
+        annotations:
+          traefik.ingress.kubernetes.io/router.middlewares: "kube-system-rfc1918@kubernetescrd"
         hosts:
           - host: "prowlarr.${SECRET_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
-        annotations:
-          kubernetes.io/ingress.class: "traefik"
-          kubernetes.io/tls-acme: "true"
-          cert-manager.io/cluster-issuer: "letsencrypt-dns"
-          traefik.ingress.kubernetes.io/router.middlewares: "kube-system-rfc1918@kubernetescrd"
         tls:
-          - hosts:
-              - "prowlarr.${SECRET_DOMAIN}"
-            secretName: prowlarr-tls
+          - secretName: "${SECRET_DOMAIN/./-}-tls"
