--- a/cluster/apps/home-automation/home-assistant/influxdb/helm-release.yaml
+++ b/cluster/apps/home-automation/home-assistant/influxdb/helm-release.yaml
@@ -33,8 +33,8 @@ spec:
 
     ingress:
       enabled: true
+      ingressClassName: "traefik"
       annotations:
-        kubernetes.io/ingress.class: "traefik"
         traefik.ingress.kubernetes.io/router.middlewares: "kube-system-rfc1918@kubernetescrd"
       hostname: "hass-influxdb.${SECRET_DOMAIN}"
       tls: true
