--- a/cluster/apps/file-service/resilio-sync/helm-release.yaml
+++ b/cluster/apps/file-service/resilio-sync/helm-release.yaml
@@ -29,8 +29,8 @@ spec:
     ingress:
       main:
         enabled: true
+        ingressClassName: "traefik"
         annotations:
-          kubernetes.io/ingress.class: "traefik"
           traefik.ingress.kubernetes.io/router.middlewares: "kube-system-rfc1918@kubernetescrd"
         hosts:
           - host: "resilio-sync.${SECRET_DOMAIN}"
