将kubesphere-system命名空间加入仓库管理，方便自动同步https证书

--- a/cluster/core/namespaces/kustomization.yaml
+++ b/cluster/core/namespaces/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
   - gitlab.yaml
   - home-automation.yaml
   - kasten-io.yaml
+  - kubesphere-system.yaml
   - metallb-system.yaml
   - monitoring.yaml
   - nexus.yaml
