在nexus中添加一个ghcr.io的容器镜像

--- a/cluster/apps/programming/nexus-repository-manager/helm-release.yaml
+++ b/cluster/apps/programming/nexus-repository-manager/helm-release.yaml
@@ -39,6 +39,9 @@ spec:
           - host: "container-image-nexus.${SECRET_DOMAIN}"
             port: 5004
             secretName: "${SECRET_DOMAIN/./-}-tls"
+          - host: "ghcr-io-nexus.${SECRET_DOMAIN}"
+            port: 5005
+            secretName: "${SECRET_DOMAIN/./-}-tls"
 
     ingress:
       enabled: true
