--- a/cluster/apps/programming/nexus-repository-manager/direct-ingress/kustomization.yaml
+++ b/cluster/apps/programming/nexus-repository-manager/direct-ingress/kustomization.yaml
@@ -7,3 +7,4 @@ resources:
   - nexus-nexus-repository-manager-docker-5002.yaml
   - nexus-nexus-repository-manager-docker-5003.yaml
   - nexus-nexus-repository-manager-docker-5004.yaml
+  - nexus-nexus-repository-manager-docker-5005.yaml
