在nexus中添加一个registry.k8s.io的容器镜像

--- a/cluster/apps/programming/nexus-repository-manager/direct-ingress/kustomization.yaml
+++ b/cluster/apps/programming/nexus-repository-manager/direct-ingress/kustomization.yaml
@@ -8,3 +8,4 @@ resources:
   - nexus-nexus-repository-manager-docker-5003.yaml
   - nexus-nexus-repository-manager-docker-5004.yaml
   - nexus-nexus-repository-manager-docker-5005.yaml
+  - nexus-nexus-repository-manager-docker-5006.yaml
