--- a/cluster/apps/programming/nexus-repository-manager/helm-release.yaml
+++ b/cluster/apps/programming/nexus-repository-manager/helm-release.yaml
@@ -42,6 +42,9 @@ spec:
           - host: "ghcr-io-nexus.${SECRET_DOMAIN}"
             port: 5005
             secretName: "${SECRET_DOMAIN/./-}-tls"
+          - host: "registry-k8s-io-nexus.${SECRET_DOMAIN}"
+            port: 5006
+            secretName: "${SECRET_DOMAIN/./-}-tls"
 
     ingress:
       enabled: true
