--- a/cluster/apps/3d-print/octoprint/data-pvc.yaml
+++ b/cluster/apps/3d-print/octoprint/data-pvc.yaml
@@ -10,4 +10,4 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: ceph-block-ssd-r2
+  storageClassName: ceph-block-application
