调整octoprint的部署节点名

--- a/cluster/apps/3d-print/octoprint/helm-release.yaml
+++ b/cluster/apps/3d-print/octoprint/helm-release.yaml
@@ -58,7 +58,7 @@ spec:
                 - key: kubernetes.io/hostname
                   operator: In
                   values:
-                    - "home-raspberry-pi4b"
+                    - "raspberry-pi4b"
     tolerations:
       - key: "kubernetes.io/arch"
         operator: "Equal"
