--- a/cluster/apps/3d-print/octoprint/helm-release.yaml
+++ b/cluster/apps/3d-print/octoprint/helm-release.yaml
@@ -25,8 +25,7 @@ spec:
     ingress:
       main:
         enabled: true
-        annotations:
-          kubernetes.io/ingress.class: traefik
+        ingressClassName: "traefik"
         hosts:
           - host: "octoprint.${SECRET_DOMAIN}"
             paths:
