--- a/cluster/apps/file-service/nextcloud/helm-release.yaml
+++ b/cluster/apps/file-service/nextcloud/helm-release.yaml
@@ -22,8 +22,7 @@ spec:
 
     ingress:
       enabled: true
-      annotations:
-        kubernetes.io/ingress.class: "traefik"
+      ingressClassName: "traefik"
       hosts:
         - host: "nextcloud.${SECRET_DOMAIN}"
           paths:
