--- a/cluster/apps/others/bitwarden/helm-release.yaml
+++ b/cluster/apps/others/bitwarden/helm-release.yaml
@@ -26,8 +26,7 @@ spec:
     ingress:
       main:
         enabled: true
-        annotations:
-          kubernetes.io/ingress.class: traefik
+        ingressClassName: "traefik"
         hosts:
           - host: "bitwarden.${SECRET_DOMAIN}"
             paths:
