调整octoprint的污点容忍

--- a/cluster/apps/3d-print/octoprint/helm-release.yaml
+++ b/cluster/apps/3d-print/octoprint/helm-release.yaml
@@ -59,7 +59,6 @@ spec:
                   values:
                     - "raspberry-pi4b"
     tolerations:
-      - key: "kubernetes.io/arch"
-        operator: "Equal"
-        value: "arm64"
+      - key: "node-role.kubernetes.io/edge"
+        operator: "Exists"
         effect: "NoSchedule"
