--- a/cluster/apps/3d-print/octoprint/helm-release.yaml
+++ b/cluster/apps/3d-print/octoprint/helm-release.yaml
@@ -49,6 +49,10 @@ spec:
         enabled: true
         type: hostPath
         hostPath: /dev/ttyUSB0
+      vcgencmd:
+        enabled: true
+        type: hostPath
+        hostPath: /usr/bin/vcgencmd
       vcgencmd-vchiq:
         enabled: true
         type: hostPath
