尝试给octoprint容器内引入树莓派的vcgencmd

--- a/cluster/apps/3d-print/octoprint/helm-release.yaml
+++ b/cluster/apps/3d-print/octoprint/helm-release.yaml
@@ -53,6 +53,10 @@ spec:
         enabled: true
         type: hostPath
         hostPath: /usr/bin/vcgencmd
+      vcgencmd-libvchiq:
+        enabled: true
+        type: hostPath
+        hostPath: /usr/lib/aarch64-linux-gnu/libvchiq_arm.so
       vcgencmd-vchiq:
         enabled: true
         type: hostPath
