--- a/cluster/apps/3d-print/octoprint/helm-release.yaml
+++ b/cluster/apps/3d-print/octoprint/helm-release.yaml
@@ -57,6 +57,10 @@ spec:
         enabled: true
         type: hostPath
         hostPath: /usr/lib/aarch64-linux-gnu/libvchiq_arm.so
+      vcgencmd-libvcos:
+        enabled: true
+        type: hostPath
+        hostPath: /usr/lib/aarch64-linux-gnu/libvcos.so
       vcgencmd-vchiq:
         enabled: true
         type: hostPath
