调整octoprint的节点亲和设置，改成使用节点选择器

--- a/cluster/apps/3d-print/octoprint/helm-release.yaml
+++ b/cluster/apps/3d-print/octoprint/helm-release.yaml
@@ -71,15 +71,8 @@ spec:
         type: hostPath
         hostPath: /dev/vchiq
 
-    affinity:
-      nodeAffinity:
-        requiredDuringSchedulingIgnoredDuringExecution:
-          nodeSelectorTerms:
-            - matchExpressions:
-                - key: kubernetes.io/hostname
-                  operator: In
-                  values:
-                    - "raspberry-pi4b"
+    nodeSelector:
+      kubernetes.io/hostname: "raspberry-pi4b"
 
     tolerations:
       - key: "node-role.kubernetes.io/edge"
