--- a/cluster/apps/3d-print/octoprint/helm-release.yaml
+++ b/cluster/apps/3d-print/octoprint/helm-release.yaml
@@ -66,6 +66,10 @@ spec:
         enabled: true
         type: hostPath
         hostPath: /usr/lib/aarch64-linux-gnu/libvcos.so
+      vcgencmd-libc:
+        enabled: true
+        type: hostPath
+        hostPath: /usr/lib/aarch64-linux-gnu/libc.so.6
       vcgencmd-vchiq:
         enabled: true
         type: hostPath
