--- a/cluster/apps/3d-print/octoprint/helm-release.yaml
+++ b/cluster/apps/3d-print/octoprint/helm-release.yaml
@@ -58,18 +58,10 @@ spec:
         enabled: true
         type: hostPath
         hostPath: /usr/bin/vcgencmd
-      vcgencmd-libvchiq:
+      vcgencmd-lib:
         enabled: true
         type: hostPath
-        hostPath: /usr/lib/aarch64-linux-gnu/libvchiq_arm.so
-      vcgencmd-libvcos:
-        enabled: true
-        type: hostPath
-        hostPath: /usr/lib/aarch64-linux-gnu/libvcos.so
-      vcgencmd-libc:
-        enabled: true
-        type: hostPath
-        hostPath: /usr/lib/aarch64-linux-gnu/libc.so.6
+        hostPath: /usr/lib/aarch64-linux-gnu
       vcgencmd-vchiq:
         enabled: true
         type: hostPath
