--- a/cluster/apps/3d-print/octoprint/helm-release.yaml
+++ b/cluster/apps/3d-print/octoprint/helm-release.yaml
@@ -58,10 +58,18 @@ spec:
         enabled: true
         type: hostPath
         hostPath: /usr/bin/vcgencmd
-      vcgencmd-lib:
+      vcgencmd-libvchiq:
         enabled: true
         type: hostPath
-        hostPath: /usr/lib/aarch64-linux-gnu
+        hostPath: /usr/lib/aarch64-linux-gnu/libvchiq_arm.so
+      vcgencmd-libvcos:
+        enabled: true
+        type: hostPath
+        hostPath: /usr/lib/aarch64-linux-gnu/libvcos.so
+      vcgencmd-libc:
+        enabled: true
+        type: hostPath
+        hostPath: /usr/lib/aarch64-linux-gnu/libc.so.6
       vcgencmd-vchiq:
         enabled: true
         type: hostPath
