调整nexus的魔改ingress资源配置，加入helm自动生成的除版本号以外的内容，避免helm自动生成时由于资源存在导致冲突报错

--- a/cluster/apps/programming/nexus-repository-manager/direct-ingress/nexus-nexus-repository-manager-docker-5005.yaml
+++ b/cluster/apps/programming/nexus-repository-manager/direct-ingress/nexus-nexus-repository-manager-docker-5005.yaml
@@ -4,7 +4,17 @@ kind: Ingress
 metadata:
   name: nexus-nexus-repository-manager-docker-5005
   namespace: nexus
+  labels:
+    app.kubernetes.io/instance: nexus
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/name: nexus-repository-manager
+    helm.toolkit.fluxcd.io/name: nexus
+    helm.toolkit.fluxcd.io/namespace: nexus
+  annotations:
+    meta.helm.sh/release-name: nexus
+    meta.helm.sh/release-namespace: nexus
 spec:
+  ingressClassName: traefik
   rules:
     - host: "ghcr-io-nexus.${SECRET_DOMAIN}"
       http:
