--- a/cluster/core/kustomization.yaml
+++ b/cluster/core/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - cert-manager
   - gpu-operator
-  - kasten
+#  - kasten
   - kube-system
 #  - kubevirt
   - metallb-system
