--- a/cluster/apps/entertainment/overseerr/helm-release.yaml
+++ b/cluster/apps/entertainment/overseerr/helm-release.yaml
@@ -36,12 +36,15 @@ spec:
       main:
         enabled: true
         ingressClassName: "traefik"
-        annotations:
-          traefik.ingress.kubernetes.io/router.middlewares: "kube-system-rfc1918@kubernetescrd"
         hosts:
           - host: "overseerr.${SECRET_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
+          - host: "overseerr.direct.${SECRET_DOMAIN}"
+            paths:
+              - path: /
+                pathType: Prefix
         tls:
           - secretName: "${SECRET_DOMAIN/./-}-tls"
+          - secretName: "direct-${SECRET_DOMAIN/./-}-tls"
