将octoprint的数据目录改为本地存储，避免因为罕见情况wifi连接不稳定导致容器异常，进而导致处理中断

--- a/cluster/apps/3d-print/octoprint/helm-release.yaml
+++ b/cluster/apps/3d-print/octoprint/helm-release.yaml
@@ -47,7 +47,8 @@ spec:
     persistence:
       data:
         enabled: true
-        existingClaim: octoprint-data
+        type: hostPath
+        hostPath: /data/octoprint
         mountPath: /octoprint
       printer:
         enabled: true
