移除octoprint的存活和就绪检测探针，只保留启动检测，避免在网络质量差时被误杀，导致影响打印机工作

--- a/cluster/apps/3d-print/octoprint/helm-release.yaml
+++ b/cluster/apps/3d-print/octoprint/helm-release.yaml
@@ -83,3 +83,10 @@ spec:
       - key: "node-role.kubernetes.io/edge"
         operator: "Exists"
         effect: "NoSchedule"
+
+    probes:
+      liveness:
+        enabled: false
+
+      readiness:
+        enabled: false
