将flux定时更新helm存储库索引的间隔时间调成一星期

--- a/cluster/base/flux-system/charts/helm/sentry-charts.yaml
+++ b/cluster/base/flux-system/charts/helm/sentry-charts.yaml
@@ -5,6 +5,6 @@ metadata:
   name: sentry-charts
   namespace: flux-system
 spec:
-  interval: 30m
+  interval: 168h
   url: https://sentry-kubernetes.github.io/charts
   timeout: 2m
