--- a/cluster/base/flux-system/charts/helm/appscode-charts.yaml
+++ b/cluster/base/flux-system/charts/helm/appscode-charts.yaml
@@ -5,6 +5,6 @@ metadata:
   name: appscode-charts
   namespace: flux-system
 spec:
-  interval: 30m
+  interval: 168h
   url: https://charts.appscode.com/stable/
   timeout: 2m
