--- a/cluster/base/flux-system/charts/helm/cilium-charts.yaml
+++ b/cluster/base/flux-system/charts/helm/cilium-charts.yaml
@@ -5,6 +5,6 @@ metadata:
   name: cilium-charts
   namespace: flux-system
 spec:
-  interval: 30m
+  interval: 168h
   url: https://helm.cilium.io/
   timeout: 2m
