--- a/cluster/base/flux-system/charts/helm/gitlab-charts.yaml
+++ b/cluster/base/flux-system/charts/helm/gitlab-charts.yaml
@@ -5,6 +5,6 @@ metadata:
   name: gitlab-charts
   namespace: flux-system
 spec:
-  interval: 30m
+  interval: 168h
   url: https://charts.gitlab.io/
   timeout: 2m
