--- a/cluster/base/flux-system/charts/helm/grafana-charts.yaml
+++ b/cluster/base/flux-system/charts/helm/grafana-charts.yaml
@@ -5,6 +5,6 @@ metadata:
   name: grafana-charts
   namespace: flux-system
 spec:
-  interval: 30m
+  interval: 168h
   url: https://grafana.github.io/helm-charts
   timeout: 2m
