--- a/cluster/base/flux-system/charts/helm/influxdata-charts.yaml
+++ b/cluster/base/flux-system/charts/helm/influxdata-charts.yaml
@@ -5,6 +5,6 @@ metadata:
   name: influxdata-charts
   namespace: flux-system
 spec:
-  interval: 30m
+  interval: 168h
   url: https://helm.influxdata.com/
   timeout: 2m
