--- a/cluster/base/flux-system/charts/helm/kasten-charts.yaml
+++ b/cluster/base/flux-system/charts/helm/kasten-charts.yaml
@@ -5,6 +5,6 @@ metadata:
   name: kasten-charts
   namespace: flux-system
 spec:
-  interval: 30m
+  interval: 168h
   url: https://charts.kasten.io/
   timeout: 2m
