--- a/cluster/base/flux-system/charts/helm/nextcloud-charts.yaml
+++ b/cluster/base/flux-system/charts/helm/nextcloud-charts.yaml
@@ -5,6 +5,6 @@ metadata:
   name: nextcloud-charts
   namespace: flux-system
 spec:
-  interval: 30m
+  interval: 168h
   url: https://nextcloud.github.io/helm/
   timeout: 2m
