--- a/cluster/base/flux-system/charts/helm/nvidia-charts.yaml
+++ b/cluster/base/flux-system/charts/helm/nvidia-charts.yaml
@@ -5,6 +5,6 @@ metadata:
   name: nvidia-charts
   namespace: flux-system
 spec:
-  interval: 30m
+  interval: 168h
   url: https://helm.ngc.nvidia.com/nvidia
   timeout: 2m
