--- a/cluster/base/flux-system/charts/helm/rancher-charts.yaml
+++ b/cluster/base/flux-system/charts/helm/rancher-charts.yaml
@@ -5,6 +5,6 @@ metadata:
   name: rancher-charts
   namespace: flux-system
 spec:
-  interval: 30m
+  interval: 168h
   url: http://rancher-mirror.oss-cn-beijing.aliyuncs.com/server-charts/stable
   timeout: 2m
