--- a/cluster/base/flux-system/charts/helm/rook-ceph-charts.yaml
+++ b/cluster/base/flux-system/charts/helm/rook-ceph-charts.yaml
@@ -5,6 +5,6 @@ metadata:
   name: rook-ceph-charts
   namespace: flux-system
 spec:
-  interval: 30m
+  interval: 168h
   url: https://charts.rook.io/release
   timeout: 2m
