由于fluentbit-operator仍然存在内存超限崩溃问题，重新启用对它的修复部分

--- a/cluster/apps/cluster-manage/kubesphere/fix/kustomization.yaml
+++ b/cluster/apps/cluster-manage/kubesphere/fix/kustomization.yaml
@@ -2,5 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - prometheus-operator-fix.yaml
+#  - prometheus-operator-fix.yaml
   - fluentbit-operator-fix.yaml
