--- a/cluster/apps/cluster-manage/kubesphere/kustomization.yaml
+++ b/cluster/apps/cluster-manage/kubesphere/kustomization.yaml
@@ -5,6 +5,6 @@ resources:
   - https://github.com/kubesphere/ks-installer/releases/download/v3.3.0/kubesphere-installer.yaml
   - https://github.com/kubesphere/ks-installer/releases/download/v3.3.0/cluster-configuration.yaml
   - console-ingress.yaml
-#  - fix
+  - fix
 patchesStrategicMerge:
   - cluster-configuration.yaml
