--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - gitlab-charts.yaml
   - grafana-charts.yaml
   - influxdata-charts.yaml
+  - itzg-charts.yaml
   - jetstack-charts.yaml
   - k8s-at-home-charts.yaml
   - kasten-charts.yaml
