调整cluster-configuration.yaml文件，修改kubesphere的ES配置（https://github.com/kubesphere/ks-installer/blob/f860029d1d974698234d6aa249425e269af8e491/roles/common/templates/custom-values-elasticsearch.yaml.j2）

--- a/cluster/apps/cluster-manage/kubesphere/cluster-configuration.yaml
+++ b/cluster/apps/cluster-manage/kubesphere/cluster-configuration.yaml
@@ -7,13 +7,20 @@ metadata:
 spec:
   common:
     es:
+      nodeSelector:
+        kubernetes.io/hostname: "home-server-nut"
       master:
         volumeSize: 4Gi
         replicas: 1
-        resources: { }
+        resources:
+          limits:
+            memory: 8Gi
       data:
         volumeSize: 20Gi
         replicas: 1
+        resources:
+          limits:
+            memory: 8Gi
       logMaxAge: 7
       elkPrefix: logstash
 
