尝试解决GPU共享的问题

--- a/cluster/core/gpu-operator/nvidia-gpu-operator/helm-release.yaml
+++ b/cluster/core/gpu-operator/nvidia-gpu-operator/helm-release.yaml
@@ -15,3 +15,7 @@ spec:
         kind: HelmRepository
         name: nvidia-charts
         namespace: flux-system
+  values:
+    devicePlugin:
+      config:
+        name: "time-slicing-config"
