--- a/cluster/core/gpu-operator/kustomization.yaml
+++ b/cluster/core/gpu-operator/kustomization.yaml
@@ -1,5 +1,5 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
-  - nvidia-gpu-operator
+#resources:
+#  - nvidia-gpu-operator
