解决gpu-operator更新时crd未更新的问题

--- a/cluster/core/gpu-operator/nvidia-gpu-operator/helm-release.yaml
+++ b/cluster/core/gpu-operator/nvidia-gpu-operator/helm-release.yaml
@@ -16,6 +16,8 @@ spec:
         name: nvidia-charts
         namespace: flux-system
   values:
+    operator:
+      upgradeCRD: true
     devicePlugin:
       config:
         name: "time-slicing-config"
