--- a/cluster/core/kube-system/cilium/helm-release.yaml
+++ b/cluster/core/kube-system/cilium/helm-release.yaml
@@ -17,7 +17,7 @@ spec:
         namespace: flux-system
   values:
     debug:
-      enabled: true
+      enabled: false
     operator:
       replicas: 1
       nodeSelector:
