给所有的flux管理的helm包设置添加30分钟的超时时间和失败后重试3次，降低其因资源不足之类问题导致安装或更新直接进入失败状态的概率

--- a/cluster/apps/entertainment/bazarr/helm-release.yaml
+++ b/cluster/apps/entertainment/bazarr/helm-release.yaml
@@ -6,6 +6,10 @@ metadata:
   namespace: entertainment
 spec:
   interval: 5m
+  timeout: 30m
+  install:
+    remediation:
+      retries: 3
   chart:
     spec:
       # renovate: registryUrl=https://k8s-at-home.com/charts/
