--- a/cluster/core/kasten/helm-release.yaml
+++ b/cluster/core/kasten/helm-release.yaml
@@ -7,6 +7,9 @@ metadata:
 spec:
   interval: 5m
   timeout: 30m
+  install:
+    remediation:
+      retries: 3
   chart:
     spec:
       # renovate: registryUrl=https://charts.kasten.io/
