--- a/cluster/apps/cluster-manage/rancher/helm-release.yaml
+++ b/cluster/apps/cluster-manage/rancher/helm-release.yaml
@@ -6,6 +6,10 @@ metadata:
   namespace: cattle-system
 spec:
   interval: 5m
+  timeout: 30m
+  install:
+    remediation:
+      retries: 3
   chart:
     spec:
       # renovate: registryUrl=http://rancher-mirror.oss-cn-beijing.aliyuncs.com/server-charts/stable
