--- a/cluster/apps/file-service/nextcloud/helm-release.yaml
+++ b/cluster/apps/file-service/nextcloud/helm-release.yaml
@@ -6,6 +6,10 @@ metadata:
   namespace: file-service
 spec:
   interval: 5m
+  timeout: 30m
+  install:
+    remediation:
+      retries: 3
   chart:
     spec:
       # renovate: registryUrl=https://nextcloud.github.io/helm/
