--- a/cluster/apps/monitoring/prometheus/helm-release.yaml
+++ b/cluster/apps/monitoring/prometheus/helm-release.yaml
@@ -6,6 +6,10 @@ metadata:
   namespace: monitoring
 spec:
   interval: 5m
+  timeout: 30m
+  install:
+    remediation:
+      retries: 3
   chart:
     spec:
       # renovate: registryUrl=https://prometheus-community.github.io/helm-charts
