--- a/cluster/apps/programming/sentry/helm-release.yaml
+++ b/cluster/apps/programming/sentry/helm-release.yaml
@@ -6,6 +6,10 @@ metadata:
   namespace: sentry
 spec:
   interval: 5m
+  timeout: 30m
+  install:
+    remediation:
+      retries: 3
   chart:
     spec:
       # renovate: registryUrl=https://sentry-kubernetes.github.io/charts
