--- a/cluster/core/cert-manager/helm-release.yaml
+++ b/cluster/core/cert-manager/helm-release.yaml
@@ -6,6 +6,10 @@ metadata:
   namespace: cert-manager
 spec:
   interval: 5m
+  timeout: 30m
+  install:
+    remediation:
+      retries: 3
   chart:
     spec:
       # renovate: registryUrl=https://charts.jetstack.io/
