--- a/cluster/core/gpu-operator/nvidia-gpu-operator/helm-release.yaml
+++ b/cluster/core/gpu-operator/nvidia-gpu-operator/helm-release.yaml
@@ -6,6 +6,10 @@ metadata:
   namespace: gpu-operator
 spec:
   interval: 5m
+  timeout: 30m
+  install:
+    remediation:
+      retries: 3
   chart:
     spec:
       # renovate: registryUrl=https://helm.ngc.nvidia.com/nvidia
