--- a/cluster/core/kube-system/metrics-server/helm-release.yaml
+++ b/cluster/core/kube-system/metrics-server/helm-release.yaml
@@ -6,6 +6,10 @@ metadata:
   namespace: kube-system
 spec:
   interval: 5m
+  timeout: 30m
+  install:
+    remediation:
+      retries: 3
   chart:
     spec:
       # renovate: registryUrl=https://kubernetes-sigs.github.io/metrics-server/
